<resources>
	<string name="hello">Hello World, BookShelf!</string>
	<string name="my_account">我的帐户</string>
	<string name="app_name">追书客</string>
	<string name="myBookShelf">书架</string>
	<string name="toBookShop">书城</string>
	<string name="toBookShelf">书架</string>
	<string name="book_detail">详情页</string>
	<string name="book_search">搜索</string>
	<string name="collect">收藏</string>
	<string name="un_collect">已收藏</string>
	<string name="select_all">全选</string>
	<string name="select_cancle">取消多选</string>
	<string name="scanning">扫描</string>
	<string name="splash_network_setting">进行联网设置</string>
	<string name="splash_prompt_content">应用检测到您没有联网，是否进行联网设置？点击“确定”进行设置</string>
	<string name="splash_prompt_OK">确定</string>
	<string name="splash_prompt_cancel">取消</string>
    <string name="splash_close">关闭</string>
    <string name="splash_downloading">文件正在下载...</string>
    <string name="splash_notify">提示</string>
    <string name="splash_get_user_info_error">获取用户信息失败，是否重试？</string>
	<string name="book_ol_shop">在线书城</string>
	<string name="book_ol_all_book">所有小说</string>
	<string name="book_ol_back">返回</string>
	<string name="book_ol_network"> 联网失败, 要不你再试试？</string>
	<string name="book_ol_network_setting">网络设置</string>
	<string name="book_ol_network_agin">重试</string>
	<string name="book_ol_network_error">错误</string>
	<string name="select_book_wait">正在收藏书籍...请稍候...</string>
	<string name="select_book">收藏书籍</string>
	<string name="book_system_setting">管理</string>
	<string name="notice_setting">通知设置</string>
	<string name="notice_setting_content">通过任务栏对有更新的书籍进行提醒</string>
	<string name="soft_update_setting">软件更新</string>
	<string name="soft_update_setting_content">将软件升级为最新版本</string>
	<string name="soft_update_setting_update">更新</string>
	<string name="soft_update_setting_download_fail">下载失败</string>
	<string name="soft_update_setting_network_fail">抱歉！网络异常，无法访问。 请确认网络连接正常后，再进行运行本程序。</string>
	<string name="sync_data">数据同步</string>
	<string name="sync_data_setting_content">同步书架等相关信息</string>
	<string name="sync_data_setting">同步</string>
	<string name="sync_data_update">数据同步提示</string>
	<string name="backup_data">数据备份</string>
	<string name="backup_data_setting">备份</string>
	<string name="backup_data_update">数据备份提示</string>
	<string name="backup_data_loading">数据正在进行备份...</string>
	<string name="backup_data_update_complete">数据备份已完成</string>
	<string name="backup_data_setting_content">备份书架等相关信息</string>
	<string name="sync_data_net_setting_tip">网路提示</string>
	<string name="sync_data_net_setting_msg">获取服务器端版本失败,请检测网络是否可用。</string>
	<string name="sync_data_loading">数据正在进行同步...</string>
	<string name="sync_data_update_complete">数据同步已完成</string>
	<string name="setting_help">使用帮助</string>
	<string name="the">第</string>
	<string name="page">页</string>
	<string name="setting_enter">确定</string>
	<string name="setting_cancel">取消</string>
	<string name="setting_check_version">检测版本中</string>
	<string name="setting_get_version">正在获取服务器版本，请稍等</string>
	<string name="setting_current_version">您当前的版本号为:</string>
    <string name="setting_new_version">,最新版本号为:</string>
    <string name="setting_update">,是否进行更新?</string>
     <string name="phoneBook">本地书籍</string>
	<string name="soft_update">软件升级</string>
	<string name="soft_update_msg">发现新版本,建议立即更新使用</string>
	<string name="soft_update_yes">立即升级</string>
	<string name="soft_update_no">暂不升级</string>
	<string name="soft_update_success">下载成功，请点击安装</string>
	<string name="soft_update_fail">服务器连接失败!</string>
	<string name="start_download">开始下载</string>
	<string name="soft_update_download">正在下载中，请稍等</string>
	<string name="soft_update_downloading">文件正在下载...（单位/kb）</string>
	<string name="start_install">安装</string>
	<string name="start_uninstall">取消</string>
	<string name="sdcarderror">SDCard不存在或写保护</string>
	<string name="soft_update_old_version">尊敬的用户，您当前使用的版本过旧，为保证您正常使用，请下载安装最新版追书客</string>
	<string name="soft_update_exit">退出</string>
	<string name="soft_update_exit_tip">退出提示</string>
	<string name="soft_update_install_tip">您已下载过该程序，是否安装。如果安装失败，请重新下载！</string>
	<string name="soft_update_confirm_exit">您确认要退出吗?</string>
	<string name="splash_prompt_yes">是</string>
	<string name="splash_prompt_no">否</string>
	<string name="soft_update_install_yes">立即安装</string>
	<string name="soft_update_uninstall_no">暂不安装</string>
	<string name="soft_update_download_agin">重新下载</string>
	<string name="soft_update_new_msg">您的软件版本已经是最新。</string>
    <string name="reservation_keyWord">仙逆</string>
    <string name="search_fail">抱歉，没有找到相关的书籍。</string>
	<string name="book_lianzai">连载中</string>
	<string name="book_wanjie">完结</string>
	<string name="MyAccount">我的账户</string>
	<string name="menu_setting">设置</string>
	<string name="menu_more">更多</string>
	<string name="directory">目 录</string>
	<string name="bookMark">书 签</string>
	<string name="authorRestBook">该作者其他书</string>
	<string name="deleteThisBook">删除该书籍</string>
	<string name="delete">删除</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="deleteBook">删除书籍</string>
	<string name="confirmDeleteBook">确定删除</string>
	<string name="deleteSuccess">删除成功!</string>
	<string name="deleteFail">删除失败!</string>
	<string name="back">返回</string>
	<string name="search_no_book">没有找到相关的书籍</string>
	<string name="cannotloadchanpterlist">无法获取章节信息!</string>
	<string name="collectbooksucess">收藏成功!</string>
	<string name="collectbookfail">收藏失败!</string>
	<string name="addToBookMark">已加入书架</string>
	<string name="bookfree">免费</string>
	<string name="bookshelf_no_update">未追更</string>
	<string name="bookshelf_yes_update">已追更</string>
	<string name="bookshelf_yes_end">已完结</string>
	<string name="bookshelf_author">作者:</string>
	<string name="bookshelf_exit">退出程序</string>
	<string name="bookshelf_enter">确定退出追书客?</string>
	<string name="bookshelft_data">您的数据缓存已满，请删除过期的书籍！</string>
	<string name="bookread_future_see">您将要看的&lt;&lt;</string>
    <string name="bookread_all_pay">>>需要整本付费</string>
	<string name="bookread_where_pay">元,是否付费?</string>
	<string name="bookread_pay">付费</string>
	<string name="bookread_pay_content">付费章节</string>
	<string name="bookread_pay_chapter">您将要看的章节需要付费</string>
	<string name="bookread_not_network">没有网络,请检查网络!</string>
	<string name="bookread_not_content">没有章节信息!</string>
	<string name="bookread_not_exist">章节不存在</string>
	<string name="bookread_account_balance">您的帐户余额：</string>
	<string name="bookread_no_shlef">该书没有加入书架,不能添加书签!</string>
	<string name="bookread_yes_shlef">该书已加入书架</string>
	<string name="bookread_size_max">字体大小已放到最大</string>
	<string name="bookread_default_size">字体大小已调到最小</string>
	<string name="bookread_has_first">已是第一章</string>
	<string name="bookread_has_last">已是最后一章</string>
	<string name="unread_content">未读章节有</string>
	<string name="unread_number">章</string>
	<string name="book_detail_author">作者:</string>
	<string name="book_detail_itemize">分类:</string>
	<string name="book_datail_state_last">状态:完结</string>
	<string name="book_datail_state_loading">状态:连载中</string>
	<string name="network_error">网络连接失败</string>
	<string name="addBook">添加书籍</string>
	<string name="isAddBook">是否添加</string>
	<string name="toBookShelf1">到书架</string>
	<string name="directory_book">本书共</string>
	<string name="pay_cancel">已经取消！</string>
	<string name="pay_success">支付成功！</string>
	<string name="pay_update">升级中，请稍候！</string>
	<string name="pay_fail">支付失败！</string>
	<string name="delete_bookmark">是否删除该书签？</string>
	<string name="addSuccess">添加成功!</string>
	<string name="book_mark">书签</string>
	<string name="page_first">您已经是第一页</string>
	<string name="page_last">您已经是最后一页</string>
	<string name="local_text">爱情</string>
	<string name="setting_newBookMark">已设置为新书签</string>
	<string name="no_choose_setting_hip">您还没有选择书签</string>
</resources>