<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@drawable/bookstore_bg"
	android:gravity="center|bottom"
	>



	<TextView android:id="@+id/book_shop_network_text"
		android:textColor="#333333"
		android:textSize="@dimen/book_shop_error_tv_size"
		android:layout_marginBottom="@dimen/book_shop_error_tv_marginBottom"
		android:text="@string/book_ol_network" android:layout_width="@dimen/book_shop_error_tv_width"
		android:layout_height="wrap_content" />


	<LinearLayout 
	    android:layout_marginBottom="@dimen/book_shop_error_lin_marginBottom"
	    android:layout_width="@dimen/book_shop_error_lin_width"
		android:layout_height="wrap_content" android:orientation="horizontal">

		<Button 
		    android:id="@+id/book_ol_network_try"
		    android:text="@string/book_ol_network_agin"
			android:background="@drawable/book_shop_network_setting" 
			android:layout_marginRight="@dimen/book_shop_error_lin_btn_marginBottom"
			android:layout_width="@dimen/book_shop_error_lin_btn_width" 
			android:layout_height="@dimen/book_shop_error_lin_btn_height" />

		<Button 
		    android:id="@+id/book_ol_network_cancel"
		    android:text="@string/splash_prompt_cancel"
			android:background="@drawable/book_shop_network_setting" 
			android:layout_width="@dimen/book_shop_error_lin_btn_width"
			android:layout_height="@dimen/book_shop_error_lin_btn_height" />

	</LinearLayout>


</LinearLayout>
